--- a/css/style.css
+++ b/css/style.css
@@ -337,9 +337,11 @@ p {
 		bottom: 0;
 		width: 90%;
 		margin: 5%;
+		margin-bottom: 23%;
 	}
+
 	#social p {
-		font-size: 0.9rem;
+		font-size: 1rem;
 		padding-top: 1rem;
 	}
 }
