--- a/css/style.css
+++ b/css/style.css
@@ -398,11 +398,11 @@ p {
 }
 
 .background-1 {
-	background-image: url("../img/home.webp");
+	background-image: url("../img/home.jpg");
 }
 
 .background-2 {
-	background-image: url("../img/about.webp");
+	background-image: url("../img/about.jpg");
 }
 
 .split-image-right {
