--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,14 @@
 
 /* Basic */
 
+#loader{
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	background: #F0EAD6 url('../img/loading.gif') no-repeat center;
+	z-index: 999;
+}
+
 * {
 	margin: 0;
 	padding: 0;
