--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,44 @@
 
 /* Basic */
 
-#loader{
+.spinner-wrapper {
 	position: fixed;
-	width: 100%;
-	height: 100vh;
-	background: #F0EAD6 url('../img/loading.gif') no-repeat center;
-	z-index: 999;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #F0EAD6;
+	z-index: 999999;
+}	
+
+.spinner {
+	width: 40px;
+	height: 40px;
+	background-color: #333;
+	position: absolute;
+    top: 48%;
+    left: 48%;
+	-webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
+	animation: sk-rotateplane 1.2s infinite ease-in-out;
+}
+  
+@-webkit-keyframes sk-rotateplane {
+	0% { -webkit-transform: perspective(120px) }
+	50% { -webkit-transform: perspective(120px) rotateY(180deg) }
+	100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
+}
+  
+@keyframes sk-rotateplane {
+	0% { 
+	  transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+	  -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg) 
+	} 50% { 
+	  transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+	  -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg) 
+	} 100% { 
+	  transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+	  -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+	}
 }
 
 * {
@@ -26,7 +58,7 @@ body,
 }
 
 body {
-        background-color: #F0EAD6;
+    background-color: #F0EAD6;
 }
 
 .btn {
